chore: rename project and improve SEO

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="LifeBranch" />
+    <meta property="og:title" content="Treevera" />
     <meta
       property="og:description"
       content="Aplicação web para visualização e detalhes da vida"
     />
-    <!-- TODO: adicionar imagem  -->
     <meta property="og:image" content="" />
     <meta
       property="og:url"
@@ -21,13 +20,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <!-- TODO: adicionar icone  -->
-    <link rel="icon" type="image/png" href="/assets/plantae.png" />
+    <link rel="icon" type="image/png" href="/avif-favicon.avif" />
     <link href="/src/index.css" rel="stylesheet" />
-    <title>LifeBranch</title>
+    <title>Treevera | Taxonomia interativa</title>
+    <meta
+      name="description"
+      content="Explore milhares de espécies através da nossa Árvore Taxonômica Interativa. Visualize detalhes e curiosidades sobre os reinos e seus diversos grupos de forma intuitiva e envolvente."
+    />
   </head>
 
   <body>
