chore: update project name

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       content="Aplicação web para visualização e detalhes da vida"
     />
     <meta property="og:image" content="" />
-    <meta
-      property="og:url"
-      content="https://iigorfelipe.github.io/life-branch/"
-    />
+    <meta property="og:url" content="https://iigorfelipe.github.io/treevera/" />
     <meta name="author" content="Igor Soares" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
